chandeliers-lus/tests/fail/ui/tc/shadow.stderr
error: Expected bool, got int
 --> tests/fail/ui/tc/shadow.rs:4:13
  |
4 |     let X = 0; tel
  |             ^
